objects/CustomObject3__c.object
<CustomObject>
    <fields>
        <fullName>MyLocation__c</fullName>
        <label>MyLocation</label>
        <scale>2</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>PicklistTest__c</fullName>
        <label>PicklistTest</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Apples</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>XmlQuotesTest__c</fullName>
        <description>Just "testing" some &lt;&gt;; random &amp; characters ' '</description>
        <inlineHelpText>Just "testing" some &lt;&gt;; random &amp; characters ' '</inlineHelpText>
        <label>XmlQuotesTest</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>CustomObject3</label>
    <nameField>
        <label>CustomObject3 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomObject3s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>